# ZVIT2

HTML+CSS+JavaScript+Figma/page/: index.html  script.js  style.css
HTML_CSS_JavaScript_Figma/page/: script.js
Python/: .env.example  .gitignore  LICENSE  pyproject.toml
Python+Testing/: README.md
Python+Testing/src/: main.py
Python+Testing/src/components/: appbar.py  base_view.py  calendar_grid.py  cards.py  category_panel.py  notification.py  rail.py
Python+Testing/src/core/: validate.py
Python+Testing/src/crud/: __init__.py  user.py
Python+Testing/src/db/: __init__.py
Python+Testing/src/logic/: __init__.py
Python+Testing/src/utils/: __init__.py
Python+Testing/src/views/: __init__.py  calendar.py  edit_event.py  event_detail.py  login.py  new.py  notifications.py  profile.py  register.py  (+2 more)
Python/src/: main.py
Python/src/components/: __init__.py  alerts.py  appbar.py  base_view.py  calendar_grid.py  cards.py  category_panel.py  event_card.py  notification.py  rail.py
Python/src/controller/: __init__.py  routing.py
Python/src/core/: config.py  reminder_scheduler.py  security.py
Python/src/crud/: __init__.py  category.py  event.py  fired_reminder.py
Python/src/db/: init_db.py  session.py
Python/src/models/: __init__.py  event.py  fired_reminder.py  user.py
Python/src/utils/: color.py
Python/src/views/: __init__.py  calendar.py  edit_event.py  event_detail.py  home.py  login.py  new.py  notifications.py  profile.py  register.py  reminder.py
Python_Testing/: .env.example  .gitignore  pyproject.toml
Python_Testing/src/: main.py
(+28 files in other folders)
